[gd_scene load_steps=7 format=3 uid="uid://c0u00gg8icfs1"]

[ext_resource type="Script" uid="uid://k5d6cdd4w8ya" path="res://control.gd" id="1_62e2m"]
[ext_resource type="Shader" uid="uid://cvmr5vt6mkflq" path="res://control.gdshader" id="2_ee4bf"]
[ext_resource type="PackedScene" uid="uid://c7cqs1wtd6h8i" path="res://Modules/FPS Counter/fps_counter.tscn" id="3_qtu10"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtu10"]
content_margin_left = 15.0
content_margin_right = 15.0
bg_color = Color(0.25098, 0.266667, 0.298039, 1)

[sub_resource type="SyntaxHighlighter" id="SyntaxHighlighter_62e2m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kbped"]
shader = ExtResource("2_ee4bf")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62e2m")
typing_color = Color(0.258824, 1, 0.760784, 1)
symbol_color = Color(0.341176, 0.698039, 1, 1)
function_color = Color(0.4, 0.901961, 1, 1)
member_variable_color = Color(0.803922, 0.811765, 0.823529, 1)
number_color = Color(0.564706, 0.890196, 0.788235, 1)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.133333, 0.160784, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Control3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Control3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Control3/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/Control3/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_qtu10")
text = "Compile Shader (Alt + Enter)"

[node name="CheckBoxAutoCompile" type="CheckBox" parent="HBoxContainer/Control3/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Auto-compile"

[node name="CodeEdit" type="CodeEdit" parent="HBoxContainer/Control3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "shader_type canvas_item;

uniform vec4 color_white : source_color = vec4(1.0);
uniform vec4 color_black : source_color = vec4(0.0);
uniform float size = 32.0; // Size of each square in pixels

void fragment() {
    vec2 uv = FRAGCOORD.xy / size;
    int checker = int(floor(uv.x) + floor(uv.y)) % 2;
    COLOR = checker == 0 ? color_white : color_black;
}"
placeholder_text = "Enter shader code..."
scroll_smooth = true
caret_blink = true
syntax_highlighter = SubResource("SyntaxHighlighter_62e2m")
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
draw_spaces = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/Control3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="LabelMessage" type="RichTextLabel" parent="HBoxContainer/Control3/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
focus_mode = 2
bbcode_enabled = true
text = "[color=red]Error: Hehe honi[/color]"
vertical_alignment = 1
selection_enabled = true

[node name="Control2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Control2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="HBoxContainer/Control2/MarginContainer"]
layout_mode = 2
text = "OUTPUT"

[node name="Control" type="Control" parent="HBoxContainer/Control2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Background" type="ColorRect" parent="HBoxContainer/Control2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="CanvasItemShaderView" type="ColorRect" parent="HBoxContainer/Control2/Control"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_kbped")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" parent="HBoxContainer/Control2/Control" instance=ExtResource("3_qtu10")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00868056
anchor_top = 0.00334448
anchor_right = 0.322917
anchor_bottom = 0.041806
grow_horizontal = 1
grow_vertical = 1
mouse_filter = 2
fit_content = true
metadata/_edit_use_anchors_ = true
metadata/_edit_pinned_properties_ = [&"mouse_filter"]

[connection signal="pressed" from="HBoxContainer/Control3/MarginContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="HBoxContainer/Control3/MarginContainer/HBoxContainer/CheckBoxAutoCompile" to="." method="_on_check_box_toggled"]
[connection signal="text_changed" from="HBoxContainer/Control3/CodeEdit" to="." method="_on_code_edit_text_changed"]
